# pomp

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE  README.md  elm.json  generate.sh  gitpod-init.sh  load_test.py
src/: game.rs  main.rs  pomp.rs  setup.rs  wedding.rs  wedding_types.rs
src/frontend/: LiveData.elm  LiveProgram.elm  Main.elm  Thunderstorm.elm  Websocket.elm
src/frontend/Page/: Loading.elm  Pomp.elm  Setup.elm  Wedding.elm
static/: index.html  main.ts
