[package]
name = "pomp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5"
env_logger = "0.9"
lazy_static = "1"
regex = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
